--- a/structures/index.html
+++ b/structures/index.html
@@ -11,6 +11,9 @@
     <nav></nav>
     <main>
         <aside></aside>
+        <section>
+            <p>estoy en la rama test</p>
+        </section>
     </main>
     <footer></footer>
 </body>
